--- a/config/aws.yml
+++ b/config/aws.yml
@@ -1,14 +1,14 @@
 production:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
-  bucket: afr-mosaic
+  access_key_id: ENV['S3_ACCESS_KEY']
+  secret_access_key: ENV['S3_SECRET_ACCESS_KEY']
+  bucket: ENV['S3_BUCKET']
 
 development:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
-  bucket: afr-mosaic
+  access_key_id: ENV['S3_ACCESS_KEY']
+  secret_access_key: ENV['S3_SECRET_ACCESS_KEY']
+  bucket: ENV['S3_BUCKET']
 
 test:
-  access_key_id: ENV['S3_KEY']
-  secret_access_key: ENV['S3_SECRET']
-  bucket: afr-mosaic
+  access_key_id: ENV['S3_ACCESS_KEY']
+  secret_access_key: ENV['S3_SECRET_ACCESS_KEY']
+  bucket: ENV['S3_BUCKET']
