--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,10 @@ development:
   <<: *default
   database: db/mosaics_development
 
+test:
+  <<: *default
+  database: db/mosaics_test
+
 production:
   <<: *default
   database: db/mosaics_production
